--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+    <meta name="msvalidate.01" content="DF6AC632805B03ECAC105D8459FDADDB" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bienvenidos a DvR Solutions, Vigilancia Clara, Tecnología Completa.">
